--- a/app/src/main/res/layout/activity_hard.xml
+++ b/app/src/main/res/layout/activity_hard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bluecoolColor"
-    tools:context=".Easy">
+    tools:context=".Hard">
 
     <Button
         android:id="@+id/countries"
@@ -20,7 +20,6 @@
         android:text="countries" />
     <Button
         android:id="@+id/time"
-        android:onClick="onClick"
         android:layout_width="130dp"
         android:layout_height="100dp"
         android:layout_marginTop="350dp"
@@ -41,7 +40,7 @@
         android:layout_marginTop="15dp"
         android:background="#00BCD4"
         android:gravity="center"
-        android:text="Easy"
+        android:text="Hard"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         />
@@ -52,7 +51,6 @@
         android:layout_height="100dp"
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="241dp"
-        android:onClick="onClick"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="41dp"
         android:background="@drawable/all_buttons"
